# arxiv-sentinel

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.observability.yml  compose.pipeline.yml  compose.yml  launch_ui.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
airflow/: Dockerfile  entrypoint.sh  requirements.txt
airflow/dags/: ingest_papers.py
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md
examples/agentic-qa/: README.md  ask_agent.py
examples/basic-search/: README.md  search.py
examples/paper-ingestion/: README.md  fetch_papers.py
scripts/: pull_model.sh
src/sentinel/: __init__.py  app.py  exceptions.py  gradio_ui.py  lifespan.py  settings.py  telegram.py
src/sentinel/agent/: __init__.py  graph.py  nodes.py  runner.py  state.py
src/sentinel/api/: __init__.py  deps.py  middleware.py  schemas.py
src/sentinel/api/routes/: __init__.py  ask.py  ask_agentic.py  feedback.py  health.py  search.py
src/sentinel/cache/: __init__.py  redis.py
src/sentinel/db/: __init__.py  engine.py  models.py
src/sentinel/db/repositories/: __init__.py  papers.py
src/sentinel/domain/: __init__.py  chunk.py  paper.py
src/sentinel/embeddings/: __init__.py  jina.py
src/sentinel/ingestion/: __init__.py  arxiv.py  chunker.py  pdf.py
src/sentinel/llm/: __init__.py  client.py  prompts.py
src/sentinel/search/: __init__.py  client.py  indexer.py  queries.py  schema.py
src/sentinel/tracing/: __init__.py  langfuse.py
tests/: conftest.py
tests/api/: conftest.py  test_ask.py  test_ask_agentic.py  test_health.py  test_search.py
tests/integration/: conftest.py  test_search_pipeline.py
tests/unit/: conftest.py  test_agent_graph.py  test_agent_nodes.py  test_chunker.py  test_prompts.py  test_queries.py  test_schemas.py  test_settings.py
