[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-sentinel"
version = "0.1.0"
description = "Production-grade arXiv paper discovery with agentic RAG"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
authors = [{ name = "arxiv-sentinel contributors" }]
keywords = [
    "arxiv",
    "rag",
    "retrieval-augmented-generation",
    "opensearch",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi[standard]>=0.135.3",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.0",
    "opensearch-py>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "redis>=6.0.0",
    "langfuse>=3.0.0",
    "python-telegram-bot>=21.0,<22.0",
]

[project.optional-dependencies]
pdf = ["docling>=2.0.0"]
ui = ["gradio>=4.0.0"]
all = ["docling>=2.0.0", "gradio>=4.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-dotenv>=0.5.2",
    "asgi-lifespan>=2.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
    "testcontainers>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
]
ignore = [
    "E501",
    "TC001",
    "TC002",
    "TC003",
    "SIM105",
    "SIM108",
    "N818",
    "B905",
]

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files = [".env.test"]
testpaths = ["tests"]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
